画像のアスペクト比を固定と画面幅の変更による表示の修正

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
   </header>
   <main>
     <section class="hero-container">
-      <h1 class="hero-copy">毎日を笑顔に</h1>
-      <div class="hero-image1"><img src="./images/firstview 2.jpeg" alt=""></div>
-      <div class="hero-image2"></div>
+      <div class="hero-image1">
+        <img src="./images/firstview 2.jpeg" alt="">
+      </div>
+      <div class="hero-text">
+        <h1 class="hero-copy">毎日を笑顔に</h1>
+        <div class="hero-image2"></div>
+      </div>
     </section>
   </main>
 </body>
